Fix BUG and add a common question page

--- a/admin/src/main/resources/templates/information/create.html
+++ b/admin/src/main/resources/templates/information/create.html
@@ -11,7 +11,7 @@
 				<label class="control-label col-sm-1">标题</label>
 				<div class="col-sm-3">
 					<input type="text" class="form-control" name="title" ng-model="item.title" ng-required="true" ng-maxlength="50" />
-					<span ng-show="infoForm.title.$error.required" class="text-danger">请输入商品名称</span>
+					<span ng-show="infoForm.title.$error.required" class="text-danger">请输入资讯标题</span>
 					<span ng-show="infoForm.title.$error.maxlength" class="text-danger">长度应小于50</span>
 				</div>
 			</div>
