--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -160,7 +160,7 @@
                     </div>
                     <div class="brand fr">
                         <div class="brand-box">
-                        	<a th:each="brand:${brands}" th:href="@{${brand.href}}"><img th:src="@{${brand.coverImg}}" width="110" height="65"/>
+                        	<a th:each="brand:${brands}" th:href="@{${brand.href}}" target="_blank"><img th:src="@{${brand.coverImg}}" width="110" height="65"/>
                         	</a>
                         </div>
                     </div>
