--- a/web/src/main/resources/templates/search/model/products.html
+++ b/web/src/main/resources/templates/search/model/products.html
@@ -93,7 +93,7 @@
 						<div class="pic-row tit" th:text="${product.name}"></div>
 						<div class="pic-row">
 							<label>品牌：</label>
-							<span th:text="${product.brand.name}"></span>
+							<span class="brand" th:text="${product.brand.name}"></span>
 						</div>
 						<div class="pic-row">
 							<label >产地：</label>
@@ -101,7 +101,7 @@
 						</div>
 						<div class="pic-row">
 							<label>型号：</label>
-							<span th:text="${product.model}"></span>
+							<span class="sp" th:text="${product.model}"></span>
 						</div>
 						<div class="pic-row bodr" th:id="'coll'+${product.id}">
 							<a class="btn-cancel coll" th:attr="data-id=${product.id}">加入收藏</a>
