--- a/web/src/main/resources/templates/user/common/buys.html
+++ b/web/src/main/resources/templates/user/common/buys.html
@@ -148,7 +148,7 @@
 	</div>
 	<div class="PDF temp-wrap bodr">
 		<div class="ajaxLogin-close">
-			<img th:src="@{/img/icon-close.png}" width="20px" height="20px"/>
+			<span style="width:30px;height:30px;font-size:30px;">&times;</span>
 		</div>
 		<h3 class="temp-h"><b>请选择PDF模板</b></h3>
 		<form target="_blank" th:method="get" id="pdfForm" action="">
