--- a/web/src/main/resources/templates/user/common/buy.html
+++ b/web/src/main/resources/templates/user/common/buy.html
@@ -112,7 +112,7 @@ $(function() {
 	<div class="fixed"></div>
 	<div class="hide-wrap temp-wrap bodr">
 		<div class="ajaxLogin-close">
-			<img th:src="@{/img/icon-close.png}" width="20px" height="20px"/>
+			<span style="width:30px;height:30px;font-size:30px;">&times;</span>
 		</div>
 		<h3 class="temp-h"><b>请选择PDF模板</b></h3>
 		<form th:action="'/user/buyRecords/'+${buy.noId}+'.pdf'" target="_blank" th:method="get">
