--- a/web/src/main/resources/templates/user/provider/modifyProduct.html
+++ b/web/src/main/resources/templates/user/provider/modifyProduct.html
@@ -213,7 +213,7 @@
 							<p>2.
 								产品名称中只能包含一种产品，不得把产品系列当作单条产品发布；可加入型号，但不允许加入其它任何如联系方式、价格或“进口”“国产”“现货”等,或和产品名称无关的符号。否则，我们有权更改或删除。</p>
 							<p>3.
-								只能上传<i class="red">1M</i>一下的图片，富文本框中图片最佳效果为宽度<i class="red">890px</i>，可通过图片属性中宽度、高度、间距和对齐方式对图片或文字进行排版</p>
+								只能上传<i class="red">1M</i>以下的图片，富文本框中图片最佳效果为宽度<i class="red">890px</i>，可通过图片属性中宽度、高度、间距和对齐方式对图片或文字进行排版</p>
 						</div>
 						<div class="center">
 							<button class="btn green">保存</button>	
