--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -35,9 +35,9 @@
                             <label class="icon-yq">仪器</label>
                             <p>
                                 <a href="/products/_search?secondCategory=220">实验室常用设备</a>
-                                <a href="/products/_search?secondCategory=195">天平</a>
-                                <a href="/products/_search?secondCategory=60">分子生物实验仪器</a>
                                 <a href="/products/_search?secondCategory=90">色谱系统</a>
+                                <a href="/products/_search?secondCategory=60">分子生物实验仪器</a>
+                                <a href="/products/_search?secondCategory=195">天平</a>
                             </p>
                             <div class="category-child-list">
                             	<a th:each="productCategory:${yqs}" 
@@ -50,8 +50,8 @@
                             <p>
                                 <a href="/products/_search?secondCategory=344">生物化学</a>
                                 <a href="/products/_search?secondCategory=369">常用生化试剂</a>
-                                <a href="/products/_search?secondCategory=387">酶</a>
                                 <a href="/products/_search?secondCategory=432">PCR/RT-PCR</a>
+                                <a href="/products/_search?secondCategory=387">酶</a>
                             </p>
                             <div class="category-child-list">
                             	<a th:each="productCategory:${sjs}" 
@@ -65,8 +65,8 @@
                                 <a href="/products/_search?secondCategory=753">常用耗材</a>
                                 <a href="/products/_search?secondCategory=769">移液器</a>
                                 <a href="/products/_search?secondCategory=777">吸头</a>
-                                <a href="/products/_search?secondCategory=785">瓶</a>
                                 <a href="/products/_search?secondCategory=821">PCR耗材</a>
+                                <a href="/products/_search?secondCategory=785">瓶</a>
                                 <a href="/products/_search?secondCategory=807">管</a>
                             </p>
                             <div class="category-child-list">
@@ -108,7 +108,7 @@
             <div class="news fr">
                 <div class="tabs-nav news-nav">
                     <a class="active">行业要闻</a>
-                    <a>新品成果</a>
+                    <a class="nobor">新品成果</a>
                     <a class="nobor">厂商动态</a>
                 </div>
                 <div class="tab-conts news-box">
@@ -143,7 +143,6 @@
         <div class="products">
             <div class="hd-line clearfix">
                 <h3 class="fl">商品展示</h3>
-                <a class="fr"><img src="img/more.png"/></a>
             </div>
             <div class="product-list">
                 <div class="product-wrap clearfix">
