--- a/web/src/main/resources/templates/information/informations.html
+++ b/web/src/main/resources/templates/information/informations.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content=""/>
-  <title>行业要闻</title>
+  <title>资讯列表</title>
   <link type="text/css" rel="stylesheet" th:href="@{/css/global.css}"/>
   <script type="text/javascript" th:src="@{/js/jquery-min.js}"></script>
   <script th:src="@{/js/script.js}"></script>
