--- a/web/src/main/resources/templates/user/common/createBuy.html
+++ b/web/src/main/resources/templates/user/common/createBuy.html
@@ -53,11 +53,11 @@
 									<label>申请人</label> <input type="text" th:value="${buy.user.realName}" disabled="disabled" style="width: 233px;"/>
 								</div>
 								<div class="form-group">
-									<label><i>*</i>经费类别</label><input type="text" class="w635" th:field="*{fundCategory}"/>
+									<label><i>*</i>经费类别</label><input type="text" class="w635" style="background-color: white;" th:field="*{fundCategory}"/>
 									<i class="error ml115" th:if="${#fields.hasErrors('fundCategory')}" th:errors="*{fundCategory}">必填</i>
 								</div>
 								<div class="form-group">
-									<label><i>*</i>项目名称</label><input type="text" class="w635" th:field="*{name}" />
+									<label><i>*</i>项目名称</label><input type="text" class="w635" th:field="*{name}" style="background-color: white;"/>
 									<i class="error ml115" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">必填</i>
 								</div>
 								<table width="90%" class="mauto">
@@ -90,13 +90,13 @@
 								</div>
 								<div class="form-group">
 									<label class="top"><i>*</i>申请理由</label>
-									<textarea class="w635" rows="5" th:field="*{reason}"></textarea>
+									<textarea class="w635" rows="5" th:field="*{reason}" style="background-color: white;"></textarea>
 									<i class="error ml115" th:if="${#fields.hasErrors('reason')}" th:errors="*{reason}">必填</i>
 								</div>
 								<div class="form-group">
 									<label><i>*</i>期望到货日期</label> 
-									<input th:if="${buy.arrivalTime!=null}" class="form-control datepicker" th:value="${#dates.format(buy.arrivalTime, 'yyyy-MM-dd')}" id="arrivalTime" name="arrivalTime" type="text" />
-									<input th:unless="${buy.arrivalTime!=null}" class="form-control datepicker" id="arrivalTime" name="arrivalTime" type="text" />
+									<input th:if="${buy.arrivalTime!=null}" class="form-control datepicker" style="background-color: white;" th:value="${#dates.format(buy.arrivalTime, 'yyyy-MM-dd')}" id="arrivalTime" name="arrivalTime" type="text" />
+									<input th:unless="${buy.arrivalTime!=null}" class="form-control datepicker" id="arrivalTime" name="arrivalTime" style="background-color: white;" type="text" />
 									<i class="error" th:if="${#fields.hasErrors('arrivalTime')}" th:errors="*{arrivalTime}">必填</i>
 								</div>
 								<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
