--- a/web/src/main/resources/templates/user/common/signup-result.html
+++ b/web/src/main/resources/templates/user/common/signup-result.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="" />
-<title>修改密码</title>
+<title>注册成功</title>
 <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
 <meta name="_csrf" th:content="${_csrf.token}" />
 <meta name="_csrf_header" th:content="${_csrf.headerName}" />
@@ -44,7 +44,7 @@
 		</div>
 		<div class="result-center">
 			<div class="tit">
-				<img th:src="@{/img/icon-alt.png}"/>
+				<img th:src="@{/img/icon-alts.png}"/>
 				<span class="pw-point1"><i th:text="${name}"></i>恭喜您注册成功！</span>
 			</div>
 			<div>
