--- a/web/src/main/resources/templates/user/forgetPw-result.html
+++ b/web/src/main/resources/templates/user/forgetPw-result.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="" />
-<title>修改密码</title>
+<title>找回密码成功</title>
 <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
 <meta name="_csrf" th:content="${_csrf.token}" />
 <meta name="_csrf_header" th:content="${_csrf.headerName}" />
@@ -40,7 +40,7 @@
 	<!-- header -->
 	<div class="wrapper">
 		<div class="hd resg-hd">
-			<span>修改密码</span>
+			<span>找回密码</span>
 		</div>
 		<div class="mb150">				
 			<h1 class="pw-point">密码修改成功！5秒后返回登录，<a href="/login">立即返回</a></h1>
