--- a/web/src/main/resources/templates/user/provider/supplierDetail.html
+++ b/web/src/main/resources/templates/user/provider/supplierDetail.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content=""/>
-  <title>个人资料-企业</title>
+  <title>个人资料-企业用户</title>
   <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
   <script type="text/javascript" th:src="@{/js/jquery-1.11.2.min.js}"></script>
   <script type="text/javascript" th:src="@{/js/jquery.ui.widget.js}"></script>
