--- a/web/src/main/resources/static/css/global.css
+++ b/web/src/main/resources/static/css/global.css
@@ -1564,16 +1564,14 @@ a.plus:hover {
 }
 
 .pic-box .pic-row.sp{
-	position: absolute;
-	width: 155px;
+	width: 195px;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
 }
 
 .pic-box .pic-row.brand{
-	position: absolute;
-	width: 155px;
+	width: 195px;
 	overflow: hidden;
 	white-space: nowrap;
 	text-overflow: ellipsis;
@@ -2387,6 +2385,7 @@ margin: 10px 0 15px;
 }
 
 .logo-small .btn.orange {
+	color:white;
     margin-left: 20px;
 }
 
@@ -2897,7 +2896,7 @@ a.fff {
     border: 2px solid #ccc;
 }
 
-.thickbox img{
+.thickbox span{
 	position:absolute;
 	right:5px;
 	top:5px;
@@ -3488,6 +3487,7 @@ select.pAndC{
 	padding-top: 5px;
 	padding-bottom: 5px;
 	color: #42a5f6;
+	font-size: 12px;
 }
 
 .problem{
@@ -3524,7 +3524,7 @@ select.pAndC{
 	margin-bottom: -10px;
 }
 .result-center .btn{
-margin-top: 30px
+	margin-top: 30px
 }
 
 .result-center button{
@@ -3533,4 +3533,8 @@ margin-top: 30px
 	font-size:24px;
 	cursor:pointer;
 	height: 42px;
+}
+
+.background-white{
+	background-color: white;
 }
