--- a/web/src/main/resources/templates/information/information.html
+++ b/web/src/main/resources/templates/information/information.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content=""/>
-  <title>行业要闻详细</title>
+  <title>资讯详情</title>
   <link type="text/css" rel="stylesheet" th:href="@{/css/global.css}"/>
   <script type="text/javascript" th:src="@{/js/jquery-1.11.2.min.js}"></script>
   <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
