--- a/web/src/main/resources/templates/productcategory/productCategorys.html
+++ b/web/src/main/resources/templates/productcategory/productCategorys.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content=""/>
-  <title>仪器分类</title>
+  <title>分类列表</title>
   <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
   <script type="text/javascript" th:src="@{/js/jquery-1.11.2.min.js}"></script>
   <script type="text/javascript" th:src="@{/js/script.js}"></script>
