--- a/web/src/main/resources/templates/search/brand/brands.html
+++ b/web/src/main/resources/templates/search/brand/brands.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head lang="en">
 <meta charset="UTF-8" />
-<title>仪器商品详情</title>
+<title>品牌搜索</title>
 <link type="text/css" rel="stylesheet" th:href="@{/css/global.css}" />
 <meta name="_csrf" th:content="${_csrf.token}" />
 <meta name="_csrf_header" th:content="${_csrf.headerName}" />
