--- a/web/src/main/resources/templates/user/common/buy.html
+++ b/web/src/main/resources/templates/user/common/buy.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="" />
-<title>采购申请</title>
+<title>采购申请详情</title>
 <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}" />
 <script th:src="@{/js/jquery-1.11.2.min.js}"></script>
 <script type="text/javascript" th:src="@{/js/prompt.js}"></script>
@@ -17,7 +17,7 @@ $(function() {
 	$(document).ajaxSend(function(e, xhr, options) {
 		xhr.setRequestHeader(header, token);
 	});
-	$(".ajaxLogin-close img").click(function(){
+	$(".ajaxLogin-close span").click(function(){
 		$('.hide-wrap').fadeOut();
 		$('.fixed').fadeOut();
 	});
@@ -53,7 +53,7 @@ $(function() {
 							<label>申请人</label><input type="text" disabled="disabled" th:field="*{user.realName}" style="width: 236px;"/>
 						</div>
 						<div class="form-group">
-							<label>费类别</label><input type="text" class="w635" th:field="*{fundCategory}" disabled="disabled"/>
+							<label>经费类别</label><input type="text" class="w635 " th:field="*{fundCategory}"  disabled="disabled"/>
 						</div>
 						<div class="form-group">
 							<label>项目名称</label><input type="text" class="w635" th:field="*{name}" disabled="disabled"/>
