--- a/web/src/main/resources/templates/user/common/buys.html
+++ b/web/src/main/resources/templates/user/common/buys.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <meta name="description" content=""/>
-  <title>采购申请</title>
+  <title>采购申请列表</title>
   <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
   <script type="text/javascript" th:src="@{/js/jquery-1.11.2.min.js}"></script>
   <script type="text/javascript" th:src="@{/js/prompt.js}"></script>
@@ -56,7 +56,7 @@
 			$(".fixed").fadeIn();
 			$(".PDF").fadeIn();
 		});
-		$(".ajaxLogin-close img").click(function(){
+		$(".ajaxLogin-close span").click(function(){
 			$('.fixed').fadeOut();
 			$('.PDF').fadeOut();
 		});
