--- a/web/src/main/resources/templates/user/common/createBuySuccess.html
+++ b/web/src/main/resources/templates/user/common/createBuySuccess.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="" />
-<title>修改密码</title>
+<title>生成采购清单成功</title>
 <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}"/>
 <meta name="_csrf" th:content="${_csrf.token}" />
 <meta name="_csrf_header" th:content="${_csrf.headerName}" />
