--- a/web/src/main/resources/templates/user/common/detail.html
+++ b/web/src/main/resources/templates/user/common/detail.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="description" content="" />
-<title>个人资料-个人</title>
+<title>个人资料-普通用户</title>
 <link rel="stylesheet" type="text/css" th:href="@{/css/global.css}" />
 <meta name="_csrf" th:content="${_csrf.token}" />
 <meta name="_csrf_header" th:content="${_csrf.headerName}" />
