--- a/web/src/main/resources/templates/footer/contactUs.html
+++ b/web/src/main/resources/templates/footer/contactUs.html
@@ -26,6 +26,21 @@
 				<a class="active">联系我们</a>
 				<a href="/problems">常见问题</a>
 			</div>
+			<div class="mainpanel fr">
+				<div class="news-wrap">
+					<h2>名称：上海申捷卫生科技股份有限公司</h2>
+					<h2>&nbsp;</h2>
+					<h2>地址：上海市普陀区金沙江路1518弄2号704室</h2>
+					<h2>&nbsp;</h2>
+					<h2>电话：021-52658210</h2>
+					<h2>&nbsp;</h2>
+					<h2>传真：021-52658210</h2>
+					<h2>&nbsp;</h2>
+					<h2>邮编：200333</h2>
+					<h2>&nbsp;</h2>
+					<div><img th:src="@{/img/problem/map.png}" style="width: 805px;"/></div>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div th:include="footer/footer"></div>
